DwCA export Zipfile